--- a/.github/workflows/build-arch.yml
+++ b/.github/workflows/build-arch.yml
@@ -13,29 +13,16 @@ jobs:
 
       - name: Cleanup system
         uses: rokibhasansagar/slimhub_actions@main
-
-      - name: Upgrade system
-        uses: docker://archlinux:latest
         with:
-          args: |-
-            pacman --sync --refresh --sysupgrade --noconfirm
-
-      - name: Install required packages
-        uses: docker://archlinux:latest
-        with:
-          args: |-
-            pacman --sync --noconfirm --needed python-pytorch-rocm
-
-      - name: Install dependencies
-        uses: docker://archlinux:latest
-        with:
-          args: |-
-            python -m pip install build wheel safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1
+          retain: "docker_buildkit"
 
       - name: Build package
         uses: docker://archlinux:latest
         with:
           args: |-
+            pacman --sync --refresh --sysupgrade --noconfirm python-pytorch-rocm
+            python -m pip install build wheel
+            python -m pip install safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1
             PYTORCH_ROCM_ARCH=gfx803 python -m build --no-isolation --wheel
 
       - name: Upload artifacts
