--- a/.github/workflows/build-arch.yml
+++ b/.github/workflows/build-arch.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Cleanup system
         uses: rokibhasansagar/slimhub_actions@main
         with:
-          retain: "docker_buildkit"
+          retain: "docker_buildkit,docker_imgcache"
 
       - name: Build package
         uses: docker://archlinux:latest
