--- a/.github/workflows/build-arch.yml
+++ b/.github/workflows/build-arch.yml
@@ -22,7 +22,7 @@ jobs:
           args: |-
             pacman --sync --refresh --sysupgrade --noconfirm python-pytorch-rocm &&
             python -m pip install build wheel &&
-            python -m pip install safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1 &&
+            python -m pip install torch>=2.0.1 safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1 &&
             PYTORCH_ROCM_ARCH=gfx803 python -m build --no-isolation --wheel
 
       - name: Upload artifacts
