--- a/.github/workflows/build-arch.yml
+++ b/.github/workflows/build-arch.yml
@@ -20,10 +20,12 @@ jobs:
         uses: docker://archlinux:latest
         with:
           args: |-
-            pacman --sync --refresh --sysupgrade --noconfirm python-pytorch-rocm &&
-            python -m pip install build wheel &&
-            python -m pip install torch>=2.0.1 safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1 &&
-            PYTORCH_ROCM_ARCH=gfx803 python -m build --no-isolation --wheel
+            sh -c "
+              pacman --sync --refresh --sysupgrade --noconfirm python-pytorch-rocm
+              python -m pip install build wheel
+              python -m pip install torch>=2.0.1 safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1
+              PYTORCH_ROCM_ARCH=gfx803 python -m build --no-isolation --wheel
+            "
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
