--- a/.github/workflows/build-arch.yml
+++ b/.github/workflows/build-arch.yml
@@ -21,8 +21,7 @@ jobs:
         with:
           args: |-
             sh -c "
-              pacman --sync --refresh --sysupgrade --noconfirm python-pytorch-rocm
-              python -m pip install build wheel
+              pacman --sync --refresh --sysupgrade --noconfirm python-pip python-build python-wheel python-pytorch-rocm
               python -m pip install torch>=2.0.1 safetensors==0.3.1 sentencepiece>=0.1.97 ninja==1.11.1
               PYTORCH_ROCM_ARCH=gfx803 python -m build --no-isolation --wheel
             "
